fixed spacing on buttons

--- a/client/src/components/Wrapper/wrapper.css
+++ b/client/src/components/Wrapper/wrapper.css
@@ -111,3 +111,8 @@ li {
 #entry-name {
     font-size: 20px;
 }
+@media (max-width: 725px) {
+    .btn-primary {
+        margin-top: 15px;
+    }
+}
